# property_search

./: .env.example  .gitignore  LICENSE  Makefile  PHASE3_COMPLETION_SUMMARY.md  README.md  WINDOWS_SETUP.md  alembic.ini  amplify.yml  deploy.py  docker-compose.yml  pyproject.toml  pytest.ini  start-all.cmd  start-api-llm.cmd  start-api.cmd  start-local-services.cmd  start-local.cmd  start-sqs-worker.cmd  status-local.cmd  stop-local.cmd
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
alembic/: env.py
docs/: API.md  ARCHITECTURE.md  AWS_DEPLOYMENT.md  BEST_PRACTICES_IMPLEMENTATION.md  CODE_ISSUES_ANALYSIS.md  CORRECTNESS_CONTRACT.md  CURRENT_STATUS.md  DATA_MODEL.md  DEVELOPMENT.md  QUICKSTART.md  RELEASE_NOTES_MAR_2026.md  RESTRUCTURE_STAGE_0_SUMMARY.md  RESTRUCTURE_STAGE_1_SUMMARY.md  SOURCES.md
infra/: cdk.json  package.json
scripts/: backfill_address_match_fields.py  benchmark_search_quality.py  diagnose_ingestion.py  import_ppr.py  search_benchmark_queries.txt  seed.py  setup.py  test_llm.py
tests/: conftest.py  test_adapters.py  test_admin_lifecycle_api.py  test_admin_service.py  test_alert_service.py  test_api.py  test_backend_log_repository.py  test_bedrock_provider.py  test_daft_adapter.py  test_discovery_service.py  test_geocoder.py  test_grants_engine.py  test_ingestion_pipeline.py  test_migration_backend_logs.py  test_migration_revisions.py  test_normalizer.py  test_ppr_adapter.py  test_property_history.py  test_property_repository.py  test_property_service.py  test_propertypal_adapter.py  test_queue.py  test_retrieval_documents.py  test_saved_search_service.py  test_scrape_ingestion_guards.py  test_search_quality_benchmark.py  test_shared_utils.py  test_sold_repository.py  test_sold_service.py  test_source_config_validation.py  test_source_discovery_crawler.py  test_sqs_handler.py  test_worker_service.py  test_worker_tasks.py
web/: eslint.config.mjs  next.config.js  package-lock.json  (+3 more)
(+106 files in other folders)
